Откатил обновления maven-checkstyle-plugin и spotbugs-maven-plugin. Откатился до java 11.